--- a/cliente/index.html
+++ b/cliente/index.html
@@ -33,9 +33,11 @@
     <link rel="import" href="bower_components/core-tooltip/core-tooltip.html">
     <link rel="import" href="bower_components/paper-toast/paper-toast.html">
     <link rel="import" href="bower_components/core-pages/core-pages.html">
-
+    <link rel="import" href="bower_components/core-ajax/core-ajax.html">
+    
     <link rel="import" href="./elements/using-api.html">
     <link rel="import" href="./elements/user-model.html">
+    <link rel="import" href="./elements/file-model.html">
     <link rel="import" href="./elements/proposal-model.html">
     <link rel="import" href="lib/flatiron-director/flatiron-director.html"> 
 
