--- a/cliente/elements/proposal-model.html
+++ b/cliente/elements/proposal-model.html
@@ -50,6 +50,9 @@
           }, function (error) {
             callback();
           });
+        },
+        createFavourite:function(){
+            
         }
       });
     }());
