--- a/cliente/pages/show-publishment.html
+++ b/cliente/pages/show-publishment.html
@@ -84,25 +84,33 @@
         width: 97%;
       }
 
-    </style>
+    </style> 
+
     <proposal-model id="proposalModel"></proposal-model>
-    <div id='button-container' layout vertical center ><div class="button" on-click="{{loadAds}}" id="button" style="visibility:hidden">There're more publications</div></div>
-    <template repeat="{{ ad in ads }}">
+    <user-model id="userModel"></user-model>
+
+    <div id='button-container' layout vertical center ><div class="button" on-click="{{ loadAds }}, {{ loadFavourites }}" id="button" style="visibility:hidden">There're more publications</div></div>
+    <template repeat="{{ ad in newAds }}">
       <div id="container" layout vertical center>
         <div id="content">
           <core-item id="paper_item">
-            <div id='name_ads'>{{ ad.username }}</div>  
-            <core-icon on-click="{{ addFavorites }}"  alt="{{ad._id}}" icon="favorite" id="favorite" style="color: black;"></core-icon>
+            <div id='name_ads'>{{ ad.username }}</div> 
+            <template if="{{ ad.isFavourite }}">
+              <core-icon on-click="{{ addFavourites }}"  alt="{{ ad._id }}" icon="favorite" id="favorite" style="color: indianred;"></core-icon>
+            </template>
+            <template if="{{ !ad.isFavourite }}">
+              <core-icon on-click="{{ addFavourites }}"  alt="{{ ad._id }}" icon="favorite" id="favorite" style="color: black;"></core-icon>
+            </template>
           </core-item><hr id="lineName"/> {{ ad.content }}
         </div>
         <div id="email"> Contact e-mail: {{ad.mail}} <date> {{ad.date}} </date></div>
       </div>
       <hr id="line" />
     </template>
+    
   </template>
 
   <script>
-
     Polymer({
       ready: function () {
         var socket = io();
@@ -113,21 +121,23 @@
       },
       loadAds: function () {
         var that = this;
-        var favourites;
         this.$.button.style.visibility = "hidden";
-        this.$.userModel.getFavourites(localStorage.getItem('token'), function (result){
-            that.favourites=result;
-        })
         this.$.proposalModel.getAll(function (result) {
           that.ads = result;
         });
+        return that.ads;
       },
       toast: function () {
         this.$.toast1.show();
       },
-      addFavorites: function (event, detail, sender) {
+      loadFavourites: function () {
+        var that = this;
+        this.$.userModel.getFavourites(localStorage.getItem('token'), function (result) {
+          that.drawFavourites(result);
+        })
+      },
+      addFavourites: function (event, detail, sender) {
         sender.style.color == "black" ? sender.style.color = "indianred" : sender.style.color = "black";
-        console.log(sender.alt);
         if (sender.style.color == "rgb(205, 92, 92)" || sender.style.color == "black") {
           this.$.proposalModel.createFavourite(sender.alt, localStorage.getItem('token'), function (result) {
             if (!result) {
@@ -135,7 +145,24 @@
             }
           });
         }
+      },
+      drawFavourites: function (favourites) {
+        var ads = this.loadAds();
+        for (var i = 0; i < Object.keys(favourites).length; i++) {
+          for (var j = 0; j < Object.keys(ads).length; j++) {
+            if (favourites[i] == ads[j]._id) {
+              ads[j].isFavourite = true;
+            }
+          }
+        }
+        for (var j = 0; j < Object.keys(ads).length; j++) {
+         if (!ads[j].isFavourite) {
+            ads[j].isFavourite = false;
+          }
+        }
+        this.newAds = ads;
       }
+      
     });
   </script>
 </polymer-element>
