--- a/cliente/pages/search-page.html
+++ b/cliente/pages/search-page.html
@@ -247,6 +247,10 @@
                 -webkit-transform: translate3d(0, 0, 0);
                 transform: translate3d(0, 0, 0);
             }
+            #itemsContainer{
+                width: 90%;
+            }
+            
 
         </style>
         <using-api id="useApi"></using-api>
