--- a/cliente/pages/search-page.html
+++ b/cliente/pages/search-page.html
@@ -1,4 +1,4 @@
-
+<link href='http://fonts.googleapis.com/css?family=Antic+Didone' rel='stylesheet' type='text/css'>
 <polymer-element name="search-page">
     <template>
         <style>    
@@ -33,10 +33,11 @@
                 padding-top: 30px;
             }
             #ikarus {
-                font-size: 120%;
+                font-size: 251%;
                 line-height: normal;
-                font-family: sans-serif;
+                font-family: 'Antic Didone', serif;
                 margin-left: 48%;
+                text-shadow: 6px 6px 12px #000000;
             }
             #div3 {
                 visibility: hidden;
@@ -250,7 +251,7 @@
             #itemsContainer{
                 width: 90%;
             }
-            
+
 
         </style>
         <using-api id="useApi"></using-api>
@@ -316,8 +317,8 @@
                 Are you sure that you want to delete your account?
                 <table layout vertical center>
                     <tr >
-                      <td style="padding: 10px"><core-icon affirmative icon="done" id ="done" on-click="{{ deleteUser }}" ></core-icon></td>
-                      <td style="padding: 10px"><core-icon affirmative icon="cancel" id ="cancel"></core-icon></td>
+                        <td style="padding: 10px"><core-icon affirmative icon="done" id ="done" on-click="{{ deleteUser }}" ></core-icon></td>
+                    <td style="padding: 10px"><core-icon affirmative icon="cancel" id ="cancel"></core-icon></td>
                     </tr>
                 </table>
             </paper-dialog>
