--- a/cliente/index.html
+++ b/cliente/index.html
@@ -33,7 +33,7 @@
     <link rel="import" href="bower_components/core-tooltip/core-tooltip.html">
     <link rel="import" href="bower_components/paper-toast/paper-toast.html">
     <link rel="import" href="bower_components/core-pages/core-pages.html">
-    
+    <link rel="import" href="bower_components/core-scroll-threshold/core-scroll-threshold.html">
     
     <link rel="import" href="./elements/using-api.html">
     <link rel="import" href="./elements/user-model.html">
