--- a/cliente/pages/products-container.html
+++ b/cliente/pages/products-container.html
@@ -6,9 +6,10 @@
       }
       #core_card {
         margin-top: 15px;
-        background-color: rgba(29, 100, 155, 0.5);
+        background-color: rgba(238, 238, 238, 0.6);
+        border: solid 1px rgba(255, 255, 255, 0.4);
         border-radius: 5px;
-        height: 300px;
+        height: 250px;
         padding-top: 20px;
       }
       #img{
@@ -16,17 +17,17 @@
         height: 100%;
       }
       #imgContainer{
-        height: 200px;
-        width: 100px;
+        height: 150px;
+        width: 150px;
         margin-top: 30px;
+        border: 3px solid rgb(3, 55, 94);
       }
       core-input#title /deep/ #input,textarea{
         text-align:center;
-        text-shadow: 2px 2px 4px #000000;
+        color: black;
       }
       core-input#shipping /deep/ #input,textarea{
         text-align:center;
-        text-shadow: 1px 1px 2px #000000;
       }
       #title{
         width: 100%;
@@ -39,8 +40,8 @@
         margin-top: 10px;
       }
       #img{
-        height: 130px;
-        width: 110px;
+        height: 100%;
+        width: 100%;
         margin-bottom: 50px;
       }
       .fancy::shadow .core-tooltip {
@@ -56,8 +57,8 @@
         transform: translate3d(0, 2px, 0);
       }
       #logo {
-        height: 130px;
-        width: 110px;
+        height: 70px;
+        width: 90px;
         margin-left: 90%;
       }
       paper-spinner.blue::shadow .circle {
@@ -68,29 +69,39 @@
         height: 60px;
         margin-top: 10px;
       }
-      
+
     </style>
     <using-api id="usingApi"></using-api>
 
     <template repeat="{{ product in products.item }}">  
       <core-card id="core_card" layout vertical center >
-        <core-input id="title" readonly  value="{{ product.title[0] }}"></core-input>
-        <div id="imgContainer">
-          <core-tooltip label="View Product " position="bottom" class="fancy">
-            <a id="a" href="{{ product.viewItemURL[0] }}"><img id ="img" src="{{ product.galleryURL[0] }}" ></a>
-          </core-tooltip>
+        <div layout vertical center style="width: 60%;">
+          <div style="width: 100%;">
+            <core-input id="title" readonly  value="{{ product.title[0] }}"></core-input>
+          </div>
+          <div layout horizontal center>
+            <div layout vertical center style="width: 100%;">
+              <core-tooltip label="View Product " position="bottom" class="fancy">
+                <div id="imgContainer">
+                  <a href="{{ product.viewItemURL[0] }}"><img id ="img" src="{{ product.galleryURL[0] }}"></a>
+                </div>
+              </core-tooltip>
+            </div>
+            <div layout vertical center style="width: 100%; background-color: rgba(29, 100, 155, 0.5); border: 2px solid rgb(3, 55, 94); padding: 2px; margin-top: 30px;">
+              <core-input id="title" readonly  value="{{product.sellingStatus[0].convertedCurrentPrice[0].__value__}} {{ product.sellingStatus[0].convertedCurrentPrice[0]['@currencyId'] }}"></core-input>
+              <core-input id="shipping" readonly  value="Shipping cost: {{ product.shippingInfo[0].shippingServiceCost[0].__value__ }} {{ product.shippingInfo[0].shippingServiceCost[0]['@currencyId'] }}"></core-input>
+            </div>
+          </div>
         </div>
-        <core-input id="title" readonly  value="{{product.sellingStatus[0].convertedCurrentPrice[0].__value__}} {{ product.sellingStatus[0].convertedCurrentPrice[0].currencyId }}"></core-input>
-        <core-input id="shipping" readonly  value="Shipping cost: {{ product.shippingInfo[0].shippingServiceCost[0].value }} {{ product.shippingInfo[0].shippingServiceCost[0].currencyID }}"></core-input>
         <img id ="logo" src="../img/EBay_logo.png" >
       </core-card>
 
     </template>
-    
+
     <div id="divSpinner" layout vertical center>
-    <paper-spinner id="spinner"  class="blue"></paper-spinner>
+      <paper-spinner id="spinner"  class="blue"></paper-spinner>
     </div>
-  
+
   </template>
 
 
@@ -101,6 +112,7 @@
         value: 0
       },
       loadData: function (result) {
+        console.log(result);
         var items = result.findItemsByKeywordsResponse[0].searchResult[0];
         this.$.spinner.active = true;
         if (this.products) {
